@@ -1,7 +1,7 @@
 ---
 title: linux使用shell脚本玩转项目的启动，关闭等工作
 categories: linux
-tags: oracle shell
+tags: shell
 date: 2020-04-17 11:14:23
 ---
 
@@ -9,9 +9,11 @@ date: 2020-04-17 11:14:23
 
 看到同事蛮好的脚本就琢磨了下，然后搬运下，在博客下的友链可以找到原文
 
+2021-03-09 添加一个超清晰的linux启动web项目的脚本
+
 # 脚本及注释
 
-```txt
+```shell
 #使用方法：
 #sh restart.sh start # 启动
 #sh restart.sh # 重启
@@ -93,4 +95,119 @@ elif [[ "$1" = "kill" ]]; then
 else
     echo "[$(date '+%Y-%m-%d %H:%M:%S')] $JAR_FILE is not support $1" | tee -a $STDOUT_FILE
 fi
+```
+
+
+
+# 脚本2及注释
+
+```shell
+#!/bin/bash 
+
+#指定jdk
+JAVA_HOME=/usr/java/jdk1.8.0_221
+JAVA=$JAVA_HOME/bin/java
+
+#指定jar
+APP_NAME=/project/newctest/admin/newtTest.jar
+PIDF_NAME=Admin
+
+#指定PIDF文件，停止项目也可以直接从该文件中获取PIDF
+PIDF=$PIDF_NAME\.pid
+
+#JVM参数
+#JVM="-server -Xms512m -Xmx512m -XX:PermSize=64M -XX:MaxNewSize=128m -XX:MaxPermSize=128m -Djava.awt.headless=true -XX:+CMSClassUnloadingEnabled -XX:+CMSPermGenSweepingEnabled"
+
+#指定spring核心配置文件
+#APPFILE_PATH="-Dspring.config.location=/usr/local/demo/config/application-demo1.properties"
+
+#使用说明
+usage() {
+	echo "Usage: sh 执行脚本.sh [start|stop|restart|status]" 
+	exit 1 
+}
+
+#检查程序是否在运行 
+is_exist(){ 
+	pid=`ps -ef|grep $APP_NAME|grep -v grep|awk '{print $2}' ` 
+	#如果不存在返回1,存在返回0 
+	if [ -z "${pid}" ]; then 
+		return 1 
+	else 
+		return 0 
+	fi 
+} 
+
+#启动方法 
+start(){ 
+	is_exist 
+	if [ $? -eq "0" ]; then 
+		echo "${APP_NAME} is already running. pid=${pid} ." 
+	else 
+		#指定JVM参数、spring核心配置文件启动
+		#nohup java $JVM -jar $APPFILE_PATH $APP_NAME > /dev/null 2>&1 
+		#直接启动
+		nohup $JAVA -jar $APP_NAME >runLog.log 2>&1 &
+		#PID写入文件
+		echo $! > $PIDF
+		echo "start ${APP_NAME} successed PID=$!" 
+	fi
+} 
+
+#停止方法 
+stop(){ 
+	is_exist 
+	if [ $? -eq "0" ]; then 
+		kill $pid 
+		rm -rf $PIDF
+	  	sleep 5
+	  	is_exist
+	  	if [ $? -eq "0" ]; then 
+		    echo "begin kill -9 $pid"
+		    kill -9  $pid
+		    sleep 2
+		    echo "${APP_NAME} process stopped"  
+	  	else
+	    	echo "${APP_NAME} is not running"
+		fi  
+	else 
+		echo "${APP_NAME} is not running" 
+	fi 
+} 
+
+#输出运行状态 
+status(){ 
+	is_exist 
+	if [ $? -eq "0" ]; then 
+		echo "${APP_NAME} is running. Pid is ${pid}" 
+	else 
+		echo "${APP_NAME} is NOT running." 
+	fi 
+} 
+
+#重启 
+restart(){ 
+	stop 
+	start 
+} 
+
+#根据输入参数,选择执行对应方法,不输入则执行使用说明 
+case "$1" in 
+"start") 
+start 
+;; 
+"stop") 
+stop 
+;; 
+"status") 
+status 
+;; 
+"restart") 
+restart 
+;; 
+*) 
+usage 
+;;
+esac
+
 ```
